--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,27 @@
   <title>Tic Tac Toe</title>
 </head>
 <body>
-  <h1>Hello, World!</h1>
+  <h1>Tic-Tac-Toe!</h1>
+  <table>
+    <tr>
+      <td class="p0 p3 p6"></td>
+      <td class="p0 p4"></td>
+      <td class="p0 p5 p7"></td>
+    </tr>
+    <tr>
+      <td class="p1 p3"></td>
+      <td class="p1 p4 p6 p7"></td>
+      <td class="p1 p5"></td>
+    </tr>
+    <tr>
+      <td class="p2 p3 p7"></td>
+      <td class="p2 p4"></td>
+      <td class="p2 p5 p6"></td>
+    </tr>
+  </table>
+  <div class="win">
+    <h2>Somebody Won!</h2>
+    <button type="button" name="button">Play Again</button>
+  </div>
 </body>
 </html>
